RESOLVED FIXED 75882
[Qt][WK2] Directly-composited images sometimes appear with a wrong geometry
https://bugs.webkit.org/show_bug.cgi?id=75882
Summary [Qt][WK2] Directly-composited images sometimes appear with a wrong geometry
Noam Rosenthal
Reported 2012-01-09 12:22:13 PST
See LayoutTests/compositing/images/direct-image-compositing.html. Some of the images appear too large.
Attachments
Patch (3.14 KB, patch)
2012-01-09 12:26 PST, Noam Rosenthal
hausmann: review+
Patch (3.21 KB, patch)
2012-01-11 09:21 PST, Noam Rosenthal
no flags
Patch 1: minor improvements to TextureMapperNode (11.58 KB, patch)
2012-01-11 16:20 PST, Noam Rosenthal
no flags
Patch 1: minor improvements to TextureMapperNode (11.58 KB, patch)
2012-01-11 16:22 PST, Noam Rosenthal
no flags
Noam Rosenthal
Comment 1 2012-01-09 12:26:46 PST
Simon Hausmann
Comment 2 2012-01-11 06:30:03 PST
Comment on attachment 121711 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=121711&action=review r=me but I think you should also remove the comment before landing. > Source/WebKit2/WebProcess/WebCoreSupport/WebGraphicsLayer.cpp:421 > - m_layerInfo.drawsContent = drawsContent() || m_image; > + m_layerInfo.drawsContent = drawsContent(); Ahah, now I see why you removed the comment in the other patch. It seems that the comment removal should be taken from the other patch and moved over here ;)
Noam Rosenthal
Comment 3 2012-01-11 06:35:08 PST
(In reply to comment #2) > (From update of attachment 121711 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=121711&action=review > > r=me but I think you should also remove the comment before landing. > > > Source/WebKit2/WebProcess/WebCoreSupport/WebGraphicsLayer.cpp:421 > > - m_layerInfo.drawsContent = drawsContent() || m_image; > > + m_layerInfo.drawsContent = drawsContent(); > > Ahah, now I see why you removed the comment in the other patch. It seems that the comment removal should be taken from the other patch and moved over here ;) Yes, exactly. I kind-of applied them on top of each other :) I'll put the comment removal here.
Noam Rosenthal
Comment 4 2012-01-11 09:21:16 PST
WebKit Review Bot
Comment 5 2012-01-11 10:07:13 PST
Comment on attachment 122039 [details] Patch Clearing flags on attachment: 122039 Committed r104720: <http://trac.webkit.org/changeset/104720>
WebKit Review Bot
Comment 6 2012-01-11 10:07:19 PST
All reviewed patches have been landed. Closing bug.
Noam Rosenthal
Comment 7 2012-01-11 16:20:28 PST
Created attachment 122121 [details] Patch 1: minor improvements to TextureMapperNode
Noam Rosenthal
Comment 8 2012-01-11 16:22:22 PST
Created attachment 122122 [details] Patch 1: minor improvements to TextureMapperNode
Noam Rosenthal
Comment 9 2012-01-11 16:26:32 PST
Comment on attachment 122122 [details] Patch 1: minor improvements to TextureMapperNode Submitted patch in wrong bug...
Note You need to log in before you can comment on or make changes to this bug.